[gd_scene load_steps=7 format=3 uid="uid://c6j8l8q8q8q8"]

[ext_resource type="Script" uid="uid://dx040opqense6" path="res://src/Main.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://d4am0dmqj1po5" path="res://assets/Environment/notebook.png" id="2_rvslj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_map_bg"]
bg_color = Color(0.85, 0.85, 0.85, 0)
border_color = Color(0.6, 0.6, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_info_bar"]
bg_color = Color(1, 1, 0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color(0, 0, 0, 0.1)
shadow_size = 5
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_bg"]
bg_color = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_fill"]
bg_color = Color(0.8, 0, 0, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="DeskBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -197.0
offset_top = 68.0
offset_right = 191.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rvslj")

[node name="NotebookUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NotebookBase" type="ColorRect" parent="NotebookUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="ContentMargin" type="MarginContainer" parent="NotebookUI/NotebookBase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBox" type="VBoxContainer" parent="NotebookUI/NotebookBase/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopMargin" type="HBoxContainer" parent="NotebookUI/NotebookBase/ContentMargin/VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Title" type="Label" parent="NotebookUI/NotebookBase/ContentMargin/VBox/TopMargin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "SLASHER MANAGER"
vertical_alignment = 1

[node name="ResourceDisplay" type="VBoxContainer" parent="NotebookUI/NotebookBase/ContentMargin/VBox/TopMargin"]
layout_mode = 2

[node name="ScreamLabel" type="Label" parent="NotebookUI/NotebookBase/ContentMargin/VBox/TopMargin/ResourceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Vrisci: 0"
horizontal_alignment = 2

[node name="SPS" type="Label" parent="NotebookUI/NotebookBase/ContentMargin/VBox/TopMargin/ResourceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "+0/sek"
horizontal_alignment = 2

[node name="PageSplit" type="HBoxContainer" parent="NotebookUI/NotebookBase/ContentMargin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPage" type="VBoxContainer" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 10

[node name="MapLabel" type="Label" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/LeftPage"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "HUNT AREA (2/3)"
horizontal_alignment = 1

[node name="MapArea" type="Panel" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/LeftPage"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_map_bg")

[node name="TargetInfoBar" type="Panel" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/LeftPage/MapArea"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_info_bar")

[node name="VBox" type="VBoxContainer" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/LeftPage/MapArea/TargetInfoBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NameLabel" type="Label" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/LeftPage/MapArea/TargetInfoBar/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "TARGET NAME"

[node name="FlavorLabel" type="Label" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/LeftPage/MapArea/TargetInfoBar/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "Flavor text goes here..."
autowrap_mode = 3

[node name="HPBar" type="ProgressBar" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/LeftPage/MapArea/TargetInfoBar/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_hp_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_hp_fill")
value = 50.0
show_percentage = false

[node name="RightPage" type="VBoxContainer" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ShopLabel" type="Label" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/RightPage"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "SHOP (1/3)"
horizontal_alignment = 1

[node name="UpgradeScroll" type="ScrollContainer" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/RightPage"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="UpgradeList" type="VBoxContainer" parent="NotebookUI/NotebookBase/ContentMargin/VBox/PageSplit/RightPage/UpgradeScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
